src/objects/Sales_User_Role_Snapshots__c.object
<CustomObject>
    <fields>
        <fullName>Execution_Time__c</fullName>
        <label>Execution Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Team__c</fullName>
        <label>Team</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tenure_in_Role__c</fullName>
        <label>Tenure in Role</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User_Name_Role__c</fullName>
        <formula>User_Name__c &amp; &quot; (&quot; &amp; Team__c &amp; &quot;)&quot;</formula>
        <label>User Name (Team)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role_Bucketed__c</fullName>
        <label>User Role (Bucketed)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Role__c</fullName>
        <label>User Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Sales User Role Snapshot</label>
    <nameField>
        <label>Sales User Role Snapshots Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales User Role Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>